# intervalue

./: .pre-commit-config.yaml  README.md  architecture.md  details.md  docker-compose.dev.yml  etapes.md  projets_details.md
Aurevia_platform-master/: Makefile  README.md  docker-compose.dev.yml  pyproject.toml
Aurevia_platform-master/docs/: ai-act-model-register.json
Aurevia_platform-master/eval/: model_defaults.json  pyproject.toml
Aurevia_platform-master/evals/: eval_harness.py  golden_dataset.json
Aurevia_platform-master/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
Aurevia_platform-master/mobile/: App.tsx  app.json  package-lock.json  package.json
Aurevia_platform-master/qa-swarm/: README.md  pyproject.toml
Aurevia_platform-master/qa-swarm/src/qa_swarm/: __init__.py  cli.py  config.py  evaluator.py  executor.py  generator.py  models.py  ocr.py  pipeline.py  reporter.py
Aurevia_platform-master/qa-swarm/tests/: test_pipeline_parts.py
Aurevia_platform-master/scripts/: build-images.sh  demo.py  minikube-start.ps1  minikube-start.sh  minikube-stop.ps1  (+3 more)
frontend/: .env.development  package-lock.json  package.json  playwright.config.ts
project1_slm_fastapi/: Dockerfile  README.md  run_api.py  run_benchmark.py
project2_agentic_testing/: Dockerfile  README.md  requirements.txt
qa-swarm/: README.md  TESTING_GUIDE.md  ci_smoke.py
rapport-stage/: rapport.aux  rapport.lof  rapport.lot  rapport.out  rapport.tex  rapport.toc  rapport_stage.docx
scripts/: run-all.ps1  scan_secrets.py
(+252 files in other folders)
