[project]
name = "qa-swarm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "playwright>=1.49",
    "pillow>=10",
    "pytesseract>=0.3.13",
]

[project.scripts]
aurevia-qa-swarm = "qa_swarm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qa_swarm"]

